# linux-ipc

./: README.md
fifo/: CMakeLists.txt  README.txt  fifo_cli.c  fifo_srv.c
msgq/: CMakeLists.txt  README.txt  posix_msg_client.c  posix_msg_server.c  systemv_msg_client.c  systemv_msg_server.c
mutex/: Makefile  README.TXT  pthreads_sync.c
pipe/: CMakeLists.txt  README.txt  pipe_execlp.c
sems/: CMakeLists.txt  Makefile  README.txt  posix_sem_named.c  posix_sem_unnamed.c  posix_sem_unnamed_my.c  systemv_sem.c  systemv_sem_my.c
shm/: CMakeLists.txt  README.TXT  common.c  common.h  shm_posix_cli.c  shm_posix_common.h  shm_posix_srv.c  shm_systemv_cli.c  shm_systemv_common.h  shm_systemv_srv.c
ubus/: CMakeLists.txt  ubus_client.c  ubus_server.c
